AC_PREREQ([2.69])
AC_INIT([rtems-c-src-lib-libbsp-arm-stm32f4x],[_RTEMS_VERSION],[https://devel.rtems.org/newticket])
AC_CONFIG_SRCDIR([bsp_specs])
RTEMS_TOP(../../../../../..)

RTEMS_CANONICAL_TARGET_CPU
AM_INIT_AUTOMAKE([no-define nostdinc foreign 1.12.2])
RTEMS_BSP_CONFIGURE

RTEMS_PROG_CC_FOR_TARGET
RTEMS_CANONICALIZE_TOOLS
RTEMS_PROG_CCAS

RTEMS_CHECK_NETWORKING
AM_CONDITIONAL(HAS_NETWORKING,test "$HAS_NETWORKING" = "yes")

RTEMS_BSPOPTS_HELP([STM32F4_FAMILY_F4XXXX],[Chip belongs to the STM32F4XXXX family.])

RTEMS_BSPOPTS_SET([STM32F4_HSE_OSCILLATOR],[*],[8000000])
RTEMS_BSPOPTS_HELP([STM32F4_HSE_OSCILLATOR],[HSE oscillator frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_SYSCLK],[stm32f1*],[8000000])
RTEMS_BSPOPTS_SET([STM32F4_SYSCLK],[*],[168000000])
RTEMS_BSPOPTS_HELP([STM32F4_SYSCLK],[SYSCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_HCLK],[stm32f1*],[8000000])
RTEMS_BSPOPTS_SET([STM32F4_HCLK],[*],[168000000])
RTEMS_BSPOPTS_HELP([STM32F4_HCLK],[HCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_PCLK1],[*],[42000000])
RTEMS_BSPOPTS_HELP([STM32F4_PCLK1],[PCLK1 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_PCLK2],[*],[84000000])
RTEMS_BSPOPTS_HELP([STM32F4_PCLK2],[PCLK2 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_USART_BAUD],[*],[115200])
RTEMS_BSPOPTS_HELP([STM32F4_USART_BAUD],[baud for USARTs])

RTEMS_BSPOPTS_SET([NUM_PROCESSOR_CONSOLE_UARTS],[*],[1])
RTEMS_BSPOPTS_HELP([NUM_PROCESSOR_CONSOLE_UARTS],[Number of UARTs used for serial consoles])

RTEMS_BSPOPTS_SET([NUM_PROCESSOR_UARTS],[*],[1])
RTEMS_BSPOPTS_HELP([NUM_PROCESSOR_UARTS],[Number of UARTs used for non-console applications])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_1],[enable USART 1])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_2],[*],[0])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_2],[disable USART 2])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_3],[*],[0])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_3],[disable USART 3])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_UART_4],[*],[0])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_UART_4],[disable UART 4])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_UART_5],[*],[0])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_UART_5],[disable UART 5])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_6],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_6],[enable USART 6])

RTEMS_BSPOPTS_SET([STM32F4_ENABLE_I2C1],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4_ENABLE_I2C1],[enable I2C 1])

RTEMS_BSPOPTS_SET([STM32F4_ENABLE_I2C2],[*],[])
RTEMS_BSPOPTS_HELP([STM32F4_ENABLE_I2C2],[enable I2C 2])



RTEMS_BSPOPTS_SET([STM32F4_ENABLE_CAN1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4_ENABLE_CAN1],[enable CAN 1])

RTEMS_BSPOPTS_SET([STM32F4_CAN1_TX_PIN],[*],[GPIO_PIN_9])
RTEMS_BSPOPTS_HELP([STM32F4_CAN1_TX_PIN],[TX pin for CAN 1])

RTEMS_BSPOPTS_SET([STM32F4_CAN1_RX_PIN],[*],[GPIO_PIN_8])
RTEMS_BSPOPTS_HELP([STM32F4_CAN1_RX_PIN],[RX pin for CAN 1])

RTEMS_BSPOPTS_SET([STM32F4_CAN1_GPIO_PORT],[*],[GPIOB])
RTEMS_BSPOPTS_HELP([STM32F4_CAN1_GPIO_PORT],[GPIO Port for CAN 1])



RTEMS_BSPOPTS_SET([STM32F4_ENABLE_CAN2],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F4_ENABLE_CAN2],[enable CAN 2])

RTEMS_BSPOPTS_SET([STM32F4_CAN2_TX_PIN],[*],[GPIO_PIN_6])
RTEMS_BSPOPTS_HELP([STM32F4_CAN2_TX_PIN],[TX pin for CAN 2])

RTEMS_BSPOPTS_SET([STM32F4_CAN2_RX_PIN],[*],[GPIO_PIN_5])
RTEMS_BSPOPTS_HELP([STM32F4_CAN2_RX_PIN],[RX pin for CAN 2])

RTEMS_BSPOPTS_SET([STM32F4_CAN2_GPIO_PORT],[*],[GPIOB])
RTEMS_BSPOPTS_HELP([STM32F4_CAN2_GPIO_PORT],[GPIO Port for CAN 2])


RTEMS_BSP_CLEANUP_OPTIONS(0, 0)
RTEMS_BSP_LINKCMDS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
