AC_PREREQ([2.69])
AC_INIT([rtems-c-src-lib-libbsp-arm-stm32f4x],[_RTEMS_VERSION],[https://devel.rtems.org/newticket])
AC_CONFIG_SRCDIR([bsp_specs])
RTEMS_TOP(../../../../../..)

RTEMS_CANONICAL_TARGET_CPU
AM_INIT_AUTOMAKE([no-define nostdinc foreign 1.12.2])
RTEMS_BSP_CONFIGURE

RTEMS_PROG_CC_FOR_TARGET
RTEMS_CANONICALIZE_TOOLS
RTEMS_PROG_CCAS

RTEMS_CHECK_NETWORKING
AM_CONDITIONAL(HAS_NETWORKING,test "$HAS_NETWORKING" = "yes")

RTEMS_BSPOPTS_HELP([STM32F4_FAMILY_F4XXXX],[Chip belongs to the STM32F4XXXX family.])

#System Memory Address
RTEMS_BSPOPTS_SET([SYS_MEM_ADDR],[*],[0x1FFF0000])
RTEMS_BSPOPTS_HELP([SYS_MEM_ADDR],[System Memory Address])

#Bootloader firmware address offset in system memory
RTEMS_BSPOPTS_SET([BOOTLOADER_OFFSET],[*],[0x4])
RTEMS_BSPOPTS_HELP([BOOTLOADER_OFFSET],[Bootloader firmware address offset in system memory])

RTEMS_BSPOPTS_SET([STM32F4_HSE_OSCILLATOR],[*],[8000000])
RTEMS_BSPOPTS_HELP([STM32F4_HSE_OSCILLATOR],[HSE oscillator frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_SYSCLK],[stm32f1*],[8000000])
RTEMS_BSPOPTS_SET([STM32F4_SYSCLK],[*],[168000000])
RTEMS_BSPOPTS_HELP([STM32F4_SYSCLK],[SYSCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_HCLK],[stm32f1*],[8000000])
RTEMS_BSPOPTS_SET([STM32F4_HCLK],[*],[168000000])
RTEMS_BSPOPTS_HELP([STM32F4_HCLK],[HCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_PCLK1],[*],[42000000])
RTEMS_BSPOPTS_HELP([STM32F4_PCLK1],[PCLK1 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_PCLK2],[*],[84000000])
RTEMS_BSPOPTS_HELP([STM32F4_PCLK2],[PCLK2 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F4_USART_BAUD],[*],[115200])
RTEMS_BSPOPTS_HELP([STM32F4_USART_BAUD],[baud for USARTs])

RTEMS_BSPOPTS_SET([NUM_PROCESSOR_CONSOLE_UARTS],[*],[1])
RTEMS_BSPOPTS_HELP([NUM_PROCESSOR_CONSOLE_UARTS],[Number of UARTs used for serial consoles])

RTEMS_BSPOPTS_SET([NUM_PROCESSOR_UARTS],[*],[1])
RTEMS_BSPOPTS_HELP([NUM_PROCESSOR_UARTS],[Number of UARTs used for non-console applications])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_1],[enable USART 1])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_2],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_2],[disable USART 2])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_3],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_3],[disable USART 3])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_4],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_4],[disable UART 4])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_5],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_5],[disable UART 5])

RTEMS_BSPOPTS_SET([STM32_ENABLE_USART_6],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_USART_6],[enable USART 6])

#I2C
######### I2C 1 ###############
RTEMS_BSPOPTS_SET([STM32_ENABLE_I2C1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_I2C1],[enable I2C 1])

RTEMS_BSPOPTS_SET([STM32_I2C1_ADDRESS],[*],[0x30F])
RTEMS_BSPOPTS_HELP([STM32_I2C1_ADDRESS],[I2C 1 own address])

RTEMS_BSPOPTS_SET([STM32_I2C1_PORT],[*],[GPIOB])
RTEMS_BSPOPTS_HELP([STM32_I2C1_PORT],[GPIO Port for I2C 1])

RTEMS_BSPOPTS_SET([STM32_I2C1_SCL_PIN],[*],[GPIO_PIN_6])
RTEMS_BSPOPTS_HELP([STM32_I2C1_SCL_PIN],[SCK pin for I2C 1])

RTEMS_BSPOPTS_SET([STM32_I2C1_SDA_PIN],[*],[GPIO_PIN_7])
RTEMS_BSPOPTS_HELP([STM32_I2C1_SDA_PIN],[SDA pin for I2C 1])

#################### I2C2 ########################
RTEMS_BSPOPTS_SET([STM32_ENABLE_I2C2],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_I2C2],[enable I2C 2])

#################### I2C3 ########################
RTEMS_BSPOPTS_SET([STM32_ENABLE_I2C3],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_I2C3],[enable I2C 3])

#SPI
######### SPI 1 ###############
RTEMS_BSPOPTS_SET([STM32_ENABLE_SPI1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_SPI1],[enable SPI 1])

RTEMS_BSPOPTS_SET([STM32_SPI1_PORT],[*],[GPIOA])
RTEMS_BSPOPTS_HELP([STM32_SPI1_PORT],[GPIO Port for SPI 1])

RTEMS_BSPOPTS_SET([STM32_SPI1_SCK_PIN],[*],[GPIO_PIN_5])
RTEMS_BSPOPTS_HELP([STM32_SPI1_SCK_PIN],[SCK pin for SPI 1])

RTEMS_BSPOPTS_SET([STM32_SPI1_MISO_PIN],[*],[GPIO_PIN_6])
RTEMS_BSPOPTS_HELP([STM32_SPI1_MISO_PIN],[MISO pin for SPI 1])

RTEMS_BSPOPTS_SET([STM32_SPI1_MOSI_PIN],[*],[GPIO_PIN_7])
RTEMS_BSPOPTS_HELP([STM32_SPI1_MOSI_PIN],[MOSI pin for SPI 1])

######### SPI 2 ###############
RTEMS_BSPOPTS_SET([STM32_ENABLE_SPI2],[*],[0])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_SPI2],[enable SPI 2])


RTEMS_BSPOPTS_SET([STM32_ENABLE_CAN1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_CAN1],[enable CAN 1])

RTEMS_BSPOPTS_SET([STM32_CAN1_TX_PIN],[*],[GPIO_PIN_9])
RTEMS_BSPOPTS_HELP([STM32_CAN1_TX_PIN],[TX pin for CAN 1])

RTEMS_BSPOPTS_SET([STM32_CAN1_RX_PIN],[*],[GPIO_PIN_8])
RTEMS_BSPOPTS_HELP([STM32_CAN1_RX_PIN],[RX pin for CAN 1])

RTEMS_BSPOPTS_SET([STM32_CAN1_GPIO_PORT],[*],[GPIOB])
RTEMS_BSPOPTS_HELP([STM32_CAN1_GPIO_PORT],[GPIO Port for CAN 1])



RTEMS_BSPOPTS_SET([STM32_ENABLE_CAN2],[*],[1])
RTEMS_BSPOPTS_HELP([STM32_ENABLE_CAN2],[enable CAN 2])

RTEMS_BSPOPTS_SET([STM32_CAN2_TX_PIN],[*],[GPIO_PIN_6])
RTEMS_BSPOPTS_HELP([STM32_CAN2_TX_PIN],[TX pin for CAN 2])

RTEMS_BSPOPTS_SET([STM32_CAN2_RX_PIN],[*],[GPIO_PIN_5])
RTEMS_BSPOPTS_HELP([STM32_CAN2_RX_PIN],[RX pin for CAN 2])

RTEMS_BSPOPTS_SET([STM32_CAN2_GPIO_PORT],[*],[GPIOB])
RTEMS_BSPOPTS_HELP([STM32_CAN2_GPIO_PORT],[GPIO Port for CAN 2])


RTEMS_BSP_CLEANUP_OPTIONS(0, 0)
RTEMS_BSP_LINKCMDS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
