AC_PREREQ([2.69])
AC_INIT([rtems-c-src-lib-libbsp-arm-stm32f7x],[_RTEMS_VERSION],[https://devel.rtems.org/newticket])
AC_CONFIG_SRCDIR([bsp_specs])
RTEMS_TOP(../../../../../..)

RTEMS_CANONICAL_TARGET_CPU
AM_INIT_AUTOMAKE([no-define nostdinc foreign 1.12.2])
RTEMS_BSP_CONFIGURE

RTEMS_PROG_CC_FOR_TARGET
RTEMS_CANONICALIZE_TOOLS
RTEMS_PROG_CCAS

RTEMS_CHECK_NETWORKING
AM_CONDITIONAL(HAS_NETWORKING,test "$HAS_NETWORKING" = "yes")

RTEMS_BSPOPTS_SET([STM32F7_FAMILY_F7XXXX],[stm32f7*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_FAMILY_F7XXXX],[Chip belongs to the STM32F7XXXX family.])

RTEMS_BSPOPTS_SET([STM32F7_HSE_OSCILLATOR],[*],[25000000])
RTEMS_BSPOPTS_HELP([STM32F7_HSE_OSCILLATOR],[HSE oscillator frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_SYSCLK],[*],[210000000])
RTEMS_BSPOPTS_HELP([STM32F7_SYSCLK],[SYSCLK frequency in Hz])

RTEMS_BSPOPTS_SET([SYSCLK_FREQUENCY],[*],[STM32F7_SYSCLK])
RTEMS_BSPOPTS_HELP([SYSCLK_FREQUENCY],[STM32F SYSCLK frequency in Hz])

RTEMS_BSPOPTS_SET([HSI_FREQUENCY],[*],[16000000])
RTEMS_BSPOPTS_HELP([HSI_FREQUENCY],[STM32F internal high speed oscillator frquency in Hz])

RTEMS_BSPOPTS_SET([MAX_SYSCLK],[*],[210000000])
RTEMS_BSPOPTS_HELP([MAX_SYSCLK],[STM32F maximum system clock frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_HCLK],[*],[210000000])
RTEMS_BSPOPTS_HELP([STM32F7_HCLK],[HCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_PCLK1],[*],[42000000])
RTEMS_BSPOPTS_HELP([STM32F7_PCLK1],[PCLK1 frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7_PCLK2],[*],[54000000])
RTEMS_BSPOPTS_HELP([STM32F7_PCLK2],[PCLK2 frequency in Hz])

RTEMS_BSPOPTS_SET([APB1_CLK],[*],[STM32F7_PCLK1])
RTEMS_BSPOPTS_HELP([APB1_CLK],[STM32F APB1 CLK])

RTEMS_BSPOPTS_SET([APB2_CLK],[*],[STM32F7_PCLK2])
RTEMS_BSPOPTS_HELP([APB2_CLK],[STM32F APB2 CLK])

RTEMS_BSPOPTS_SET([STM32F7_USART_BAUD],[*],[115200])
RTEMS_BSPOPTS_HELP([STM32F7_USART_BAUD],[baud for USARTs])

RTEMS_BSPOPTS_SET([HSE_AVAILABLE],[*],[1])
RTEMS_BSPOPTS_HELP([HSE_AVAILABLE],[Is external high speed oscillator present])

RTEMS_BSPOPTS_SET([NUM_PROCESSOR_CONSOLE_UARTS],[*],[1])
RTEMS_BSPOPTS_HELP([NUM_PROCESSOR_CONSOLE_UARTS],[Number of UARTs used for serial consoles])

RTEMS_BSPOPTS_SET([NUM_PROCESSOR_UARTS],[*],[2])
RTEMS_BSPOPTS_HELP([NUM_PROCESSOR_UARTS],[Number of UARTs used for non-console applications])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_1],[*],[0])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_1],[disable USART 1])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_2],[*],[0])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_2],[disable USART 2])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_3],[*],[0])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_3],[disable USART 3])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_UART_4],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_UART_4],[enable UART 4])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_UART_5],[*],[0])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_UART_5],[disable UART 5])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_UART_6],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_6],[enable USART 6])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_7],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_7],[enable USART 7])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_USART_8],[*],[0])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_USART_8],[disable USART 8])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_I2C1],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_I2C1],[enable I2C 1])

RTEMS_BSPOPTS_SET([STM32F7_ENABLE_I2C2],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7_ENABLE_I2C2],[enable I2C 2])

RTEMS_BSP_CLEANUP_OPTIONS(0, 0)
RTEMS_BSP_LINKCMDS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
